manifests/prod/apprise-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apprise-api-service
  namespace: app-apprise-api
spec:
  selector:
    app: apprise-api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 80
